# owid-content

./: .editorconfig  .gitignore  README.md
datapages/: 143622.json  180340.json  419298.json  446217.json  446730.json  472273.json  472273_old.json  472293.json  472296.json  538918.json  538918_old.json  539883.json  541254.json  577009.json  587683.json  588777.json  671132.json  717506.json  718601.json  735978.json  815313.json  815367.json  JOE_538918.json
explorers/: 2020-review.explorer.tsv  Poverty-explorer.explorer.tsv  _10_1_ratio.explorer.tsv  _13_15_years_old_any_alcoholic_beverage_consumed_in_past_30_days__pct.explorer.tsv  _13_15_years_old_first_drink_before_age_14__pct.explorer.tsv  _15_19_years_old__current_drinkers__pct.explorer.tsv  _15_19_years_old_abstainers__lifetime__pct.explorer.tsv  _15_19_years_old_former_drinkers__pct.explorer.tsv  _15_19_years_old_heavy_episodic_drinkers__drinkers_only__pct.explorer.tsv  _15_19_years_old_heavy_episodic_drinkers__population__pct_with_95pctci.explorer.tsv  _15_19_years_old_total_alcohol_consumption_in_litres_of_pure_alcohol.explorer.tsv  _15_years_old__any_alcoholic_beverage_consumed_at_least_once_a_week__pct.explorer.tsv  _15_years_old_any_alcoholic_beverage_consumed_in_past_12_months__pct.explorer.tsv  _50_5_ratio.explorer.tsv  _90_10_ratio.explorer.tsv  (+1119 more)
scripts/demography-explorer/: Makefile  age_group.csv  demography-explorer.py  demography-explorer.template.tsv  metrics.csv  projection.csv  pyproject.toml  sex.csv
scripts/global-food-explorer/: Makefile  README.md  foods.csv  foods.tsv  global-food-explorer.py  global-food-explorer.template.tsv  pyproject.toml  requirements.txt  views-per-food.csv  views-per-food.tsv
(+59 files in other folders)
