[tool.poetry]
name = "global-food-explorer"
version = "0.1.0"
description = ""
authors = ["Marcel Gerber <mgerber59@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pandas = "1.5.3"
numpy = "^1.21.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
